--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@ __pycache__/
 importacion_cursos.txt
 importacion_docentes.txt
 
-# Ignorar horario generado
+# Ignorar archivos generados
 schedule.pdf
+execution_summary.pdf
+
 
 # Ignorar carpeta de PyCharm
 .idea
